# find_testlog

./: .gitignore  CHANGELOG.md  Cargo.toml  app-icon.xcf  find_testlog_config.json  package-lock.json  package.json  readme.md
.github/workflows/: main.yml  rust.yml
Utilities/: generate_release_json.py  generate_test_data.py
folder_structure_generator/: fsg.py  main.py
src/: barcode_scanner.html  error-dialog.js  error_dialog.html  functions.rs  index.html  main.js  main.rs  sortable.js  structs.rs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  icon.xcf
src-tauri/src/: ___main.rs  check_updates.rs  cli.rs  error_dialog.rs  extractors.rs  functions.rs  gui.rs  logging_settings.rs  main.rs  search.rs  structs.rs  windows_helpers.rs
src/assets/: app.css  barcode_scanner.css  color-box.css  error_dialog.css  footer.css  icon-box.css  main.css  override_table.css
