[package]
name = "find_testlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.163", features=["serde_derive"] }
clap = { version = "4.2.7", features = ["derive"] }
confy = "0.5.1"
