[package]
name = "find_testlog_tauri"
version = "4.3.1"
description = "Find Testlog"
authors = ["Tariq Dinmohamed <github.com/flixis>"]
repository = "https://github.com/Flixis/find_testlog"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.6", features = [ "window-set-title", "window-show", "window-close", "window-create", "updater", "os-all", "shell-open"] }
serde = { version = "1.0.202", features = ["derive"] }

confy = "0.6.1"
colored = "2.1.0"
walkdir = "2.5.0"
open = "5.1.3"
log = "0.4.21"
regex = "1.10.4"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
indexmap = { version = "2.2.6", features = ["serde"] }
simplelog = "0.12.2"
whoami = "1.5.1"
sha2 = "0.10.8"
hex = "0.4.3"

#[cfg(target_os = "windows")]
windows-sys = "0.52.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
